first version of snippet macros